evals/roles/che/templates/deploy/https/che-route-tls.yaml
# Copyright (c) 2012-2018 Red Hat, Inc
# All rights reserved. This program and the accompanying materials
# are made available under the terms of the Eclipse Public License v1.0
# which accompanies this distribution, and is available at
# http://www.eclipse.org/legal/epl-v10.html
#
apiVersion: v1
kind: Route
metadata:
    annotations:
        kubernetes.io/tls-acme: "true"
    labels:
      app: che
    name: che
spec:
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: che-host
